--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -8,7 +8,10 @@
         android:id="@+id/startSecondActivityBtn"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_centerInParent="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
         android:background="@drawable/btn_circle"
         android:text="Start"
         android:textColor="@android:color/white" />
@@ -16,7 +19,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/startSecondActivityBtn"
         android:layout_centerInParent="true"
         android:text="First activity"
         android:textColor="@android:color/white" />
